--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "None",
   "dependencies": {},
   "devDependencies": {
+    "http-server": "^0.12.3",
     "ts-loader": "^8.0.14",
     "typescript": "^4.1.3",
     "webpack": "^5.19.0",
