--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "outDir": "./client_public/",
+    "outDir": "./public/",
     "noImplicitAny": true,
     "module": "es6",
     "target": "es5",
