--- a/package.json
+++ b/package.json
@@ -4,18 +4,16 @@
   "description": "None",
   "dependencies": {},
   "devDependencies": {
-    "@types/backbone": "^1.4.5",
-    "@types/jquery": "^3.5.5",
-    "@types/underscore": "^1.10.24",
-    "backbone": "^1.4.0",
+    "@types/react": "^17.0.1",
+    "@types/react-dom": "^17.0.0",
     "css-loader": "^5.0.1",
-    "jquery": "^3.5.1",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "sass": "^1.32.5",
     "sass-loader": "^10.1.1",
     "style-loader": "^2.0.0",
     "ts-loader": "^8.0.14",
     "typescript": "^4.1.3",
-    "underscore": "^1.12.0",
     "webpack": "^5.19.0",
     "webpack-cli": "^4.4.0"
   },
