--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@types/react": "^17.0.1",
     "@types/react-dom": "^17.0.0",
     "css-loader": "^5.0.1",
+    "immutability-helper": "^3.1.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "sass": "^1.32.5",
